@@ -80,7 +80,7 @@ make_dir (const char *dir)
 }
 
 int
-mkinfo (struct rmw_target file, struct waste_containers *waste, char *time_now,
+create_trashinfo (struct rmw_target file, struct waste_containers *waste, char *time_now,
         char *time_str_appended, const short cnum)
 {
   FILE *fp;
