@@ -34,7 +34,7 @@ int
 make_dir (const char *dir);
 
 int
-mkinfo (struct rmw_target file, struct waste_containers *waste, char *time_now,
+create_trashinfo (struct rmw_target file, struct waste_containers *waste, char *time_now,
         char *time_str_appended, const short cnum);
 
 bool
